# Echord

./: .git.bak  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/app/vichord/android/: MainApplication.kt
compose/persist/: build.gradle.kts
compose/preferences/: build.gradle.kts
compose/reordering/: build.gradle.kts
compose/routing/: build.gradle.kts
core/data/: build.gradle.kts
core/material-compat/: build.gradle.kts
core/ui/: build.gradle.kts
fastlane/metadata/android/en-US/: title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ktor-client-brotli/: build.gradle.kts
rust/: Cargo.toml  build.gradle.kts  build.rs.bak  consumer-rules.pro
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/core/: core.udl  error.rs  http.rs  json.rs  mod.rs  request_impl.rs
rust/src/providers/: mod.rs
rust/src/providers/common/: common.udl  mod.rs  models.rs
rust/src/providers/github/: gitgub.udl  mod.rs  models.rs  requests.rs
rust/src/providers/innertube/: innertube.udl  mod.rs  models.rs  requests.rs
rust/src/providers/kugou/: kugou.udl  mod.rs  models.rs  requests.rs
rust/src/providers/lrclib/: irclib.udl  mod.rs  models.rs  requests.rs
rust/src/providers/piped/: mod.rs  models.rs  piped.udl  requests.rs
rust/src/providers/sponsorblock/: mod.rs  models.rs  requests.rs  sponsorblock.udl
rust/src/providers/translate/: mod.rs  models.rs  requests.rs  translate.udl
(+60 files in other folders)
