[package]
name = "vichord_rust"
version = "0.1.0"
edition = "2021" # Изменено с 2025 на стабильную 2021

[lib]
crate-type = ["cdylib"]  # Активировано для сборки динамической библиотеки .so

[dependencies]
# [MODIFIED] Добавлена фича "tokio" для async-FFI
uniffi = { version = "0.28", features = ["cli", "tokio"] }
thiserror = "1.0"
# [FIX] Удален "blocking", добавлены "brotli" (декомпрессия) и "json" (удобство)
reqwest = { version = "0.12", features = ["rustls-tls", "brotli", "json"] }
encoding_rs = "0.8"
log = "0.4"
once_cell = "1.19"
# [FIX] Добавлены фичи "rt-multi-thread" и "macros" для поддержки async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

# [NEW] Добавлена для безопасного перехвата паники (catch_unwind().await) на async FFI-границе
futures = "0.3" 

# [FIX] Явно добавлены зависимости, которые требовались
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
uniffi = { version = "0.28", features = ["build"] } # Активировано для build.rs
